--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,3 +15,10 @@ a {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
+
+.container {
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+}
